--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "firebase-admin": "^13.6.0",
         "node-fetch": "^2.7.0",
         "nodemon": "^3.1.10",
         "puppeteer": "^9.1.1",
